--- a/frontend/dexter/package.json
+++ b/frontend/dexter/package.json
@@ -29,6 +29,7 @@
     "chartjs-adapter-moment": "^1.0.0",
     "compare-versions": "^5.0.1",
     "fuzzysort": "^2.0.1",
+    "hammerjs": "^2.0.8",
     "i": "^0.3.7",
     "moment": "^2.29.4",
     "ng2-charts": "^4.0.0",
@@ -52,6 +53,7 @@
     "@angular-eslint/template-parser": "^14.0.3",
     "@angular/cli": "^14.2.1",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/hammerjs": "^2.0.41",
     "@types/jasmine": "^4.3.0",
     "@types/node": "^18.7.14",
     "@types/vis": "^4.21.24",
