--- a/backend/Bot/Bot.csproj
+++ b/backend/Bot/Bot.csproj
@@ -8,8 +8,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Discord.Net" Version="3.7.2" />
+		<PackageReference Include="Discord.Net" Version="3.8.0" />
 		<PackageReference Include="Humanizer.Core" Version="2.14.1" />
+		<PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="6.0.8" />
 
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.8" />
@@ -23,7 +24,7 @@
 
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
 
-		<PackageReference Include="AspNet.Security.OAuth.Discord" Version="6.0.9" />
+		<PackageReference Include="AspNet.Security.OAuth.Discord" Version="6.0.11" />
 
 		<PackageReference Include="RestSharp" Version="108.0.2-alpha.0.6" />
 
