--- a/backend/Bot/Bot.csproj
+++ b/backend/Bot/Bot.csproj
@@ -8,12 +8,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Discord.Net" Version="3.15.0" />
+		<PackageReference Include="Discord.Net" Version="3.15.2" />
 		<PackageReference Include="Humanizer.Core" Version="2.14.1" />
 
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.5" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.5">
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
@@ -23,11 +23,11 @@
 
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
 
-		<PackageReference Include="AspNet.Security.OAuth.Discord" Version="8.0.0" />
+		<PackageReference Include="AspNet.Security.OAuth.Discord" Version="8.1.0" />
 
-		<PackageReference Include="RestSharp" Version="110.2.1-alpha.0.16" />
+		<PackageReference Include="RestSharp" Version="111.3.0" />
 
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 	</ItemGroup>
 
 </Project>
